src/main/java/com/example/Outlet_Management/error/NoLocationsFoundException.java
package com.example.Outlet_Management.error;

public class NoLocationsFoundException extends Throwable {
    public NoLocationsFoundException(String s) {
    }
}
